2010-02-13  Noel O'Boyle
	
	* src/forcefieldgaff.cpp: Fix warnings.

2010-02-13  Noel O'Boyle
	
	* test/*: Avoid SafeOpen warnings by including obutil.h
	* formats/gulpformat.cpp, inchiformat.cpp: Add some dynamic casts to
	avoid warnings

2010-02-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/CMakeLists.txt: Add FORMATDIR to point tests at appropriate
	format location.

	* test/*: Use it.

2010-02-12  Noel O'Boyle
	
	* src/formats/CMakeLists.txt: On Windows, make sure that the XML
	formats compile to the correct location. Also no need to have
	XML_INCLUDE on Windows.

2010-02-11  Noel O'Boyle
	
	* test/CMakeLists.txt: On Windows, put the test executables along with
	the compiled DLLs.

2010-02-10  Chris Morley

	* src/formats/mdlformat.cpp: allow numbers to be other than right
	justified. (As provided by Craig.)

2010-02-08  Noel O'Boyle

	* src/formats/inchiformat.cpp, smilesformat.cpp, xml/cmlformat.cpp:
	Removal of references to strstream (legacy from GCC 2.x).

2010-02-07  Noel O'Boyle

	* src/builder.h, cpp: Make things easier by referring to unsigned long
	instead of OBStereo::Ref. Fixes problem compiling Python bindings.

2010-02-06  Noel O'Boyle

	* src/builder.cpp: IsSpiroAtom assumed that Ids were preserved on
	copying a molecule. Not true.

2010-01-26  Chris Morley

	* src/formats/MNAformat.cpp: added new format from Jeremy Murphy
	* src/formats/CMakeLists.txt,
	  windowsOBF/OBUtilFormats/OBUtilFormats.vcproj: build files

2009-12-15  Noel O'Boyle

	* src/formats/smilesformat.cpp: Create OBPairData of "SMILES Atom
	Order" whenever creating a SMILES string (not just for canonical
	SMILES). Set to "local" so that it won't be written out to an SDF
	file.

2009-12-15  Chris Morley

	* include/openbabel/parsmart.h, src/parsmart.cpp: add support for
	$ as quadruple bond to SMARTS. (Already in SMILES.)
	
	* src/bond.cpp: reset OB_KTRIPLE_BOND, etc when changing bond order.
	Fixes corruption of isonitriles in #2913204
